Fixed formatting inconsistencies